--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
         <meta charset=""UTF-8">
         <meta http-equiv=""X-UA-Compatible" content="IE-edge">
         <meta name=""viewport" content="width=device-width, initial-scale=1.0">
-
-
     </head>
     <body>
-        <h1>lab Git First time</h1>
+        <h1>Mahanakorn</h1>
     </body>
 </html>>
