--- a/menu.html
+++ b/menu.html
@@ -1,4 +1,4 @@
-<h1>หน้าหลัก</h1>
-<h1>สินค้า</h1>
-<h1>เกี่ยวกับฉัน</h1>
-<h1>สถานที่</h1>
+<h1>main</h1>
+<h1>product</h1>
+<h1>About me</h1>
+<h1>Location</h1>
